add header main and change the footer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <title>MeteoApp</title>
 </head>
 <body>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city ..." required/>
+            <input type="submit" value="search"/>
+        </form>
+    </header>
+    <main>
+        <div>
+            <h1>Paris</h1>
+        <p> Tuesday 14:49, scattered clouds
+            <br/>
+            Humidity:66%,Wind: 3.13km/h
+        </p>  
+        </div>
+        <div>
+            ⛅ 12ºC
+        </div>
+    </main>
     <footer>
-        Coded by 
+        This project was coded by 
         <a href="https://github.com/madampmarques"> Madalena Marques</a> coded hosted on <a href="https://github.com/madampmarques/meteo"></a> github and website hosted on <a href="#"></a>Netfliy
     </footer>
 </body>
