add div and class to create a box and add font-style

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <title>MeteoApp</title>
 </head>
 <body>
+    <div class="weather-app">
     <header>
         <form>
             <input type="search" placeholder="Enter a city ..." required/>
@@ -29,5 +33,6 @@
         This project was coded by 
         <a href="https://github.com/madampmarques"> Madalena Marques</a> coded hosted on <a href="https://github.com/madampmarques/meteo"></a> github and website hosted on <a href="#"></a>Netfliy
     </footer>
+    </div>
 </body>
 </html>
