--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="weather-app">
     <header>
-        <form class="search-form">
+        <form class="search-form"id="search-form">
             <input type="search" placeholder="Enter a city ..." required class="search-form-input"/>
             <input type="submit" value="search" class="search-form-button"/>
         </form>
@@ -44,5 +44,6 @@
         <a href="https://github.com/madampmarques"> Madalena Marques</a> coded hosted on <a href="https://github.com/madampmarques/meteo"></a> github and website hosted on <a href="#"></a>Netfliy
     </footer>
     </div>
+    <script src="src/index.js"></script>
 </body>
 </html>
