--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
 <body>
     <div class="weather-app">
     <header>
-        <form class="search-form"id="search-form">
-            <input type="search" placeholder="Enter a city ..." required class="search-form-input"/>
-            <input type="submit" value="search" class="search-form-button"/>
+        <form class="search-form"
+        id="search-form">
+            <input type="search" 
+            placeholder="Enter a city ..." 
+            required 
+            id="search-form-input"
+            class="search-form-input"/>
+            <input type="submit" value="search" 
+            class="search-form-button"/>
         </form>
     </header>
     <main>
         <div class="weather-app-data">
         <div>
-            <h1 class="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="weather-app-city">
+                Paris
+            </h1>
         <p class="weather-app-details"> Tuesday 14:49, scattered clouds
             <br/>
             Humidity: <strong>66%</strong>,Wind: <strong>3.13km/h</strong>
