--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <div class="weather-app-icon">
                 ⛅
             </div>
-            <div class="weather-app-temperature">
-                12
+            <div class="weather-app-temperature" id="temperature">
             </div>
             <div class="weather-app-unit"> 
               ºC   
