--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <h1 class="weather-app-city" id="weather-app-city">
                 Paris
             </h1>
-        <p class="weather-app-details"> Tuesday 14:49, scattered clouds
+        <p class="weather-app-details"> <span id="time"> </span>
+            <span id="description"></span>
             <br/>
-            Humidity: <strong>66%</strong>,Wind: <strong>3.13km/h</strong>
+            Humidity: <strong id="Humidity"></strong>,Wind: <strong id="wind-speed">3.13km/h</strong>
         </p>  
         </div>
         <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">
-                ⛅
+            <div id="icon">
             </div>
             <div class="weather-app-temperature" id="temperature">
             </div>
