--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     </main>
     <footer>
         This project was coded by 
-        <a href="https://github.com/madampmarques"> Madalena Marques</a> coded hosted on <a href="https://github.com/madampmarques/meteo"></a> github and website hosted on <a href="https://classy-pegasus-092338.netlify.app/"></a>Netfliy
+        <a href="https://github.com/madampmarques"> Madalena Marques</a> 
+        coded hosted on
+         <a href="https://github.com/madampmarques/meteo"> github</a> and website hosted on 
+         <a href="https://classy-pegasus-092338.netlify.app/">Netfliy</a>
     </footer>
     </div>
     <script src="src/index.js"></script>
