--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <div class="weather-app-data">
         <div>
             <h1 class="weather-app-city" id="weather-app-city">
-                Paris
             </h1>
-        <p class="weather-app-details"> <span id="time"> </span>
+        <p class="weather-app-details"> 
+            <span id="time"> </span>
             <span id="description"></span>
             <br/>
-            Humidity: <strong id="Humidity"></strong>,Wind: <strong id="wind-speed">3.13km/h</strong>
+            Humidity: <strong id="Humidity"></strong>,Wind: <strong id="wind-speed"></strong>
         </p>  
         </div>
         <div class="weather-app-temperature-container">
@@ -51,7 +51,8 @@
         This project was coded by 
         <a href="https://github.com/madampmarques"> Madalena Marques</a> 
         coded hosted on
-         <a href="https://github.com/madampmarques/meteo"> github</a> and website hosted on 
+         <a href="https://github.com/madampmarques/meteo"> github</a> 
+         and website hosted on 
          <a href="https://classy-pegasus-092338.netlify.app/">Netfliy</a>
     </footer>
     </div>
