--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
             </div>
         </div>
         </div>
+        <div class="weather-forecast">
+            <div class="weather-forecast-day">
+                <div class="weather-forecast-date">
+                    Tue    
+                </div>
+                <div class="weather-forecast-icon" >
+                    🌤️
+                </div>
+                <div class="weather-forecast-temperatures">
+                     15º 9º
+                </div> 
+            </div>
+
+    </div>
     </main>
     <footer>
         This project was coded by 
@@ -55,7 +69,6 @@
          and website hosted on 
          <a href="https://classy-pegasus-092338.netlify.app/">Netfliy</a>
     </footer>
-    </div>
     <script src="src/index.js"></script>
 </body>
 </html>
